10-04-2006 Zac Bowling <zac@zacbowling.com> 	gtkspell/Makefile.am - updated to stop build warnings
svn path=/trunk/gtkspell-sharp/; revision=59341

--- a/gtkspell/Makefile.am
+++ b/gtkspell/Makefile.am
@@ -40,8 +40,8 @@ gtkspell-sharp.snk: $(top_srcdir)/gtkspell-sharp.snk
 	cp $(top_srcdir)/gtkspell-sharp.snk .
 
 gtkspell-sharp.dll: $(build_sources) generated-stamp gtkspell-sharp.snk
-	$(MCS) --unsafe --target library $(GTK_SHARP_LIBS) \
-	$(build_sources) generated/*.cs -o gtkspell-sharp.dll
+	$(MCS) -unsafe -target:library $(GTK_SHARP_LIBS) \
+	$(build_sources) generated/*.cs -out:gtkspell-sharp.dll
 
 install-data-local:
 	echo "$(GACUTIL) /i $(ASSEMBLY) /f /package gtkspell-sharp-2.0 /root $(DESTDIR)$(libdir)";  \
